--- a/Dia 2/Ley 1273 de 2009.md
+++ b/Dia 2/Ley 1273 de 2009.md
@@ -1,3 +1,7 @@
 ## LEY 1273 DE 2009
 
 * Creo nuevos tipos penales relacionados con delitos informaticos y la proteccion de la informacion y de los datos con penas de prision de hasta 120 meses y multas de hasta 1500 salarios
+
+## pueda cometerse en una empresa
+
+* desde infracciones en materia de proteccion de datos hasta delitos medioambientales, pasando por fraudes cometidos por los empleados o por terceros relacionados con la empresa, publicidad enganosa, insolvencias punible 
