--- a/Dia 2/Ley 1273 de 2009.md
+++ b/Dia 2/Ley 1273 de 2009.md
@@ -5,3 +5,11 @@
 ## pueda cometerse en una empresa
 
 * desde infracciones en materia de proteccion de datos hasta delitos medioambientales, pasando por fraudes cometidos por los empleados o por terceros relacionados con la empresa, publicidad enganosa, insolvencias punible 
+
+## Estos son algunas d elas faltas informaticas mas comunes
+
+* Revelar secretos o vulnerabilidad
+* Difundir reveler o ceder a terceros los datos descubiertos
+* Revelar secretos ajenos de los que se tenga conocimiento 
+* Calumnias o unjurias hechos con publicidad y propagadas por cualquier medio
+* Estafas informaticas, a traves de manipulaciones de soportes informaticos 
